Version 1.5.x -
----------------------------
- Bug: fixed error on setup module with db transaction
- Bug: fixed error in usage of simplexml_load_file


Version 1.4.1 - 30 Jan, 2021
----------------------------
- New: added new helper CSecureHeaders with possibility to define secure headers
- Enh: added possibility to hide system queries in debug panel
- Enh: added possibility to close debug panel to minimum size
- Enh: added possibility to get records by chunks with chuck() method of Active Record
- Bug: fixed wrong assignment of _isRendered in CView


Version 1.3.2 - 24 Jan, 2020
----------------------------
- New: added CRecordEntity to ORM model
- New: added PHPUnit tests
- Enh: added possibility to use create() and update() methods in CActiveRecord
- Enh: changes in components CHttpRequest
- Enh: minor changes in database migrations
- Enh: added possibility to define order for CSS and JS registration files
- Enh: changes in helpers CValidator, CRss, CDebug, CHash, CGeoLocation, CConfig, CHtml
- Enh: in CDataForm and CFormView added new type of validation: "regex"
- Enh: code syntax changed according to new code convention
- Enh: added possibility to define lazy loading (by default) for components
- Enh: added possibility for lazy loading of core components via config
- Enh: fixed wrong path of log file in CLogger component
- Bug: fixed PHP7 syntax requirements in TCPDF vendor, CValidator helper
- Bug: fixed overwriting existing vars in View rendering


Version 1.2.2 - 01 Jan, 2019
----------------------------
- New: added possibility to define Captcha fields in CDataForm widget
- New: added possibility to define access permissions to controller actions via _accessRules() method
- New: added possibility to minify CSS and JS files via config file
- New: added Arabic language to i18n
- New: added possibility for new type of cache - data cache, changes in config file
- New: added new helper CClass
- Enh: minimum requirements for PHP is defined as 5.4.0